--- a/code/animalscode.ipynb
+++ b/code/animalscode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>_id</th>\n      <th>CODI_DISTRICTE</th>\n      <th>NOM_DISTRICTE</th>\n      <th>1er SEMESTRE 2020</th>\n      <th>2on SEMESTRE 2020</th>\n      <th>Anual 2020</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>3651</td>\n      <td>3717</td>\n      <td>3684.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>9625</td>\n      <td>9884</td>\n      <td>9754.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>8615</td>\n      <td>8770</td>\n      <td>8692.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>4</td>\n      <td>Les Corts</td>\n      <td>3592</td>\n      <td>3694</td>\n      <td>3643.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>5</td>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>5819</td>\n      <td>5945</td>\n      <td>5882.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>6</td>\n      <td>Gràcia</td>\n      <td>5421</td>\n      <td>5540</td>\n      <td>5480.5</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>7484</td>\n      <td>7636</td>\n      <td>7560.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>8</td>\n      <td>Nou Barris</td>\n      <td>7893</td>\n      <td>8071</td>\n      <td>7982.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>6939</td>\n      <td>7134</td>\n      <td>7036.5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>9520</td>\n      <td>9737</td>\n      <td>9628.5</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "   _id  CODI_DISTRICTE        NOM_DISTRICTE  1er SEMESTRE 2020  \\\n0    1               1         Ciutat Vella               3651   \n1    2               2             Eixample               9625   \n2    3               3       Sants-Montjuïc               8615   \n3    4               4            Les Corts               3592   \n4    5               5  Sarrià-Sant Gervasi               5819   \n5    6               6               Gràcia               5421   \n6    7               7       Horta-Guinardó               7484   \n7    8               8           Nou Barris               7893   \n8    9               9          Sant Andreu               6939   \n9   10              10           Sant Martí               9520   \n\n   2on SEMESTRE 2020  Anual 2020  \n0               3717      3684.0  \n1               9884      9754.5  \n2               8770      8692.5  \n3               3694      3643.0  \n4               5945      5882.0  \n5               5540      5480.5  \n6               7636      7560.0  \n7               8071      7982.0  \n8               7134      7036.5  \n9               9737      9628.5  "
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODI_DISTRICTE</th>\n      <th>NOM_DISTRICTE</th>\n      <th>Anual 2020</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>3684.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>9754.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>8692.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Les Corts</td>\n      <td>3643.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>5882.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>Gràcia</td>\n      <td>5480.5</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>7560.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>Nou Barris</td>\n      <td>7982.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>7036.5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>9628.5</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "   CODI_DISTRICTE        NOM_DISTRICTE  Anual 2020\n0               1         Ciutat Vella      3684.0\n1               2             Eixample      9754.5\n2               3       Sants-Montjuïc      8692.5\n3               4            Les Corts      3643.0\n4               5  Sarrià-Sant Gervasi      5882.0\n5               6               Gràcia      5480.5\n6               7       Horta-Guinardó      7560.0\n7               8           Nou Barris      7982.0\n8               9          Sant Andreu      7036.5\n9              10           Sant Martí      9628.5"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>ANIMALS</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>3684.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>9754.5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>8692.5</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Les Corts</td>\n      <td>3643.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>5882.0</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>Gràcia</td>\n      <td>5480.5</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>7560.0</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>Nou Barris</td>\n      <td>7982.0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>7036.5</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>9628.5</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "   CODE_DISTRICT             DISTRICT  ANIMALS\n0              1         Ciutat Vella   3684.0\n1              2             Eixample   9754.5\n2              3       Sants-Montjuïc   8692.5\n3              4            Les Corts   3643.0\n4              5  Sarrià-Sant Gervasi   5882.0\n5              6               Gràcia   5480.5\n6              7       Horta-Guinardó   7560.0\n7              8           Nou Barris   7982.0\n8              9          Sant Andreu   7036.5\n9             10           Sant Martí   9628.5"
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,11 +140,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_animals.to_csv(\"./animals_cleaned.csv\", index=False)"
+    "df_animals.to_csv(\"../data/animals_cleaned.csv\", index=False)"
    ]
   }
  ],
