--- a/code/parquesdfcode.ipynb
+++ b/code/parquesdfcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "register_id                        0\nname                               0\ninstitution_id                   420\ninstitution_name                 420\ncreated                            0\nmodified                           0\naddresses_roadtype_id            604\naddresses_roadtype_name          604\naddresses_road_id                  0\naddresses_road_name                0\naddresses_start_street_number     44\naddresses_end_street_number      592\naddresses_neighborhood_id          0\naddresses_neighborhood_name        0\naddresses_district_id              0\naddresses_district_name            0\naddresses_zip_code                 0\naddresses_town                     0\naddresses_main_address             0\naddresses_type                   604\nvalues_id                        594\nvalues_attribute_id              594\nvalues_category                  594\nvalues_attribute_name            594\nvalues_value                     596\nvalues_outstanding               594\nvalues_description               604\nsecondary_filters_id               0\nsecondary_filters_name             0\nsecondary_filters_fullpath         0\nsecondary_filters_tree             0\nsecondary_filters_asia_id          0\ngeo_epgs_25831_x                   0\ngeo_epgs_25831_y                   0\ngeo_epgs_4326_x                    0\ngeo_epgs_4326_y                    0\ndtype: int64"
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "Index(['register_id', 'name', 'institution_id', 'institution_name', 'created',\n       'modified', 'addresses_roadtype_id', 'addresses_roadtype_name',\n       'addresses_road_id', 'addresses_road_name',\n       'addresses_start_street_number', 'addresses_end_street_number',\n       'addresses_neighborhood_id', 'addresses_neighborhood_name',\n       'addresses_district_id', 'addresses_district_name',\n       'addresses_zip_code', 'addresses_town', 'addresses_main_address',\n       'addresses_type', 'values_id', 'values_attribute_id', 'values_category',\n       'values_attribute_name', 'values_value', 'values_outstanding',\n       'values_description', 'secondary_filters_id', 'secondary_filters_name',\n       'secondary_filters_fullpath', 'secondary_filters_tree',\n       'secondary_filters_asia_id', 'geo_epgs_25831_x', 'geo_epgs_25831_y',\n       'geo_epgs_4326_x', 'geo_epgs_4326_y'],\n      dtype='object')"
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>addresses_road_name</th>\n      <th>addresses_district_id</th>\n      <th>addresses_district_name</th>\n      <th>geo_epgs_4326_x</th>\n      <th>geo_epgs_4326_y</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Àrea de Joc Infantil a la Plaça de Zenòbia Cam...</td>\n      <td>Pl Zenòbia Camprubí</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>41.392712</td>\n      <td>2.188922</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Àrea de Joc Infantil a la Plaça Abat Escarré</td>\n      <td>Pl Abat Escarré</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>41.430245</td>\n      <td>2.190658</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Àrea de Joc Infantil a la Plaça Pastrana</td>\n      <td>Pl Pastrana</td>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>41.425504</td>\n      <td>2.155728</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Àrea de Joc Infantil a Santuari - La Manxa</td>\n      <td>C Santuari</td>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>41.421069</td>\n      <td>2.153945</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Àrea de Joc Infantil a la Plaça Sot dels Paletes</td>\n      <td>Pl Sot dels Paletes</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>41.437427</td>\n      <td>2.191477</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>599</th>\n      <td>Àrea de Joc Infantil a la Rambla del Raval</td>\n      <td>Rbla Raval</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>41.378551</td>\n      <td>2.169086</td>\n    </tr>\n    <tr>\n      <th>600</th>\n      <td>Àrea de Joc Infantil a la Plaça Havaneres</td>\n      <td>Pl Havaneres</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>41.421230</td>\n      <td>2.182948</td>\n    </tr>\n    <tr>\n      <th>601</th>\n      <td>Àrea de Joc Infantil a la Plaça de la Infància</td>\n      <td>Pl Infància</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>41.413719</td>\n      <td>2.196483</td>\n    </tr>\n    <tr>\n      <th>602</th>\n      <td>Àrea de Joc Infantil</td>\n      <td>C Ciutat de Granada</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>41.403019</td>\n      <td>2.192220</td>\n    </tr>\n    <tr>\n      <th>603</th>\n      <td>Àrea de Joc Infantil a la Plaça Navas</td>\n      <td>Pl Las Navas</td>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>41.374262</td>\n      <td>2.158884</td>\n    </tr>\n  </tbody>\n</table>\n<p>604 rows × 6 columns</p>\n</div>",
       "text/plain": "                                                  name  addresses_road_name  \\\n0    Àrea de Joc Infantil a la Plaça de Zenòbia Cam...  Pl Zenòbia Camprubí   \n1         Àrea de Joc Infantil a la Plaça Abat Escarré      Pl Abat Escarré   \n2             Àrea de Joc Infantil a la Plaça Pastrana          Pl Pastrana   \n3           Àrea de Joc Infantil a Santuari - La Manxa           C Santuari   \n4     Àrea de Joc Infantil a la Plaça Sot dels Paletes  Pl Sot dels Paletes   \n..                                                 ...                  ...   \n599         Àrea de Joc Infantil a la Rambla del Raval           Rbla Raval   \n600          Àrea de Joc Infantil a la Plaça Havaneres         Pl Havaneres   \n601     Àrea de Joc Infantil a la Plaça de la Infància          Pl Infància   \n602                               Àrea de Joc Infantil  C Ciutat de Granada   \n603              Àrea de Joc Infantil a la Plaça Navas         Pl Las Navas   \n\n     addresses_district_id addresses_district_name  geo_epgs_4326_x  \\\n0                       10              Sant Martí        41.392712   \n1                        9             Sant Andreu        41.430245   \n2                        7          Horta-Guinardó        41.425504   \n3                        7          Horta-Guinardó        41.421069   \n4                        9             Sant Andreu        41.437427   \n..                     ...                     ...              ...   \n599                      1            Ciutat Vella        41.378551   \n600                      9             Sant Andreu        41.421230   \n601                     10              Sant Martí        41.413719   \n602                     10              Sant Martí        41.403019   \n603                      3          Sants-Montjuïc        41.374262   \n\n     geo_epgs_4326_y  \n0           2.188922  \n1           2.190658  \n2           2.155728  \n3           2.153945  \n4           2.191477  \n..               ...  \n599         2.169086  \n600         2.182948  \n601         2.196483  \n602         2.192220  \n603         2.158884  \n\n[604 rows x 6 columns]"
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NAME_AREA</th>\n      <th>ROAD</th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>GEOX</th>\n      <th>GEOY</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Àrea de Joc Infantil a la Plaça de Zenòbia Cam...</td>\n      <td>Pl Zenòbia Camprubí</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>41.392712</td>\n      <td>2.188922</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Àrea de Joc Infantil a la Plaça Abat Escarré</td>\n      <td>Pl Abat Escarré</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>41.430245</td>\n      <td>2.190658</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Àrea de Joc Infantil a la Plaça Pastrana</td>\n      <td>Pl Pastrana</td>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>41.425504</td>\n      <td>2.155728</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Àrea de Joc Infantil a Santuari - La Manxa</td>\n      <td>C Santuari</td>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>41.421069</td>\n      <td>2.153945</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Àrea de Joc Infantil a la Plaça Sot dels Paletes</td>\n      <td>Pl Sot dels Paletes</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>41.437427</td>\n      <td>2.191477</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>599</th>\n      <td>Àrea de Joc Infantil a la Rambla del Raval</td>\n      <td>Rbla Raval</td>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>41.378551</td>\n      <td>2.169086</td>\n    </tr>\n    <tr>\n      <th>600</th>\n      <td>Àrea de Joc Infantil a la Plaça Havaneres</td>\n      <td>Pl Havaneres</td>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>41.421230</td>\n      <td>2.182948</td>\n    </tr>\n    <tr>\n      <th>601</th>\n      <td>Àrea de Joc Infantil a la Plaça de la Infància</td>\n      <td>Pl Infància</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>41.413719</td>\n      <td>2.196483</td>\n    </tr>\n    <tr>\n      <th>602</th>\n      <td>Àrea de Joc Infantil</td>\n      <td>C Ciutat de Granada</td>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>41.403019</td>\n      <td>2.192220</td>\n    </tr>\n    <tr>\n      <th>603</th>\n      <td>Àrea de Joc Infantil a la Plaça Navas</td>\n      <td>Pl Las Navas</td>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>41.374262</td>\n      <td>2.158884</td>\n    </tr>\n  </tbody>\n</table>\n<p>604 rows × 6 columns</p>\n</div>",
       "text/plain": "                                             NAME_AREA                 ROAD  \\\n0    Àrea de Joc Infantil a la Plaça de Zenòbia Cam...  Pl Zenòbia Camprubí   \n1         Àrea de Joc Infantil a la Plaça Abat Escarré      Pl Abat Escarré   \n2             Àrea de Joc Infantil a la Plaça Pastrana          Pl Pastrana   \n3           Àrea de Joc Infantil a Santuari - La Manxa           C Santuari   \n4     Àrea de Joc Infantil a la Plaça Sot dels Paletes  Pl Sot dels Paletes   \n..                                                 ...                  ...   \n599         Àrea de Joc Infantil a la Rambla del Raval           Rbla Raval   \n600          Àrea de Joc Infantil a la Plaça Havaneres         Pl Havaneres   \n601     Àrea de Joc Infantil a la Plaça de la Infància          Pl Infància   \n602                               Àrea de Joc Infantil  C Ciutat de Granada   \n603              Àrea de Joc Infantil a la Plaça Navas         Pl Las Navas   \n\n     CODE_DISTRICT        DISTRICT       GEOX      GEOY  \n0               10      Sant Martí  41.392712  2.188922  \n1                9     Sant Andreu  41.430245  2.190658  \n2                7  Horta-Guinardó  41.425504  2.155728  \n3                7  Horta-Guinardó  41.421069  2.153945  \n4                9     Sant Andreu  41.437427  2.191477  \n..             ...             ...        ...       ...  \n599              1    Ciutat Vella  41.378551  2.169086  \n600              9     Sant Andreu  41.421230  2.182948  \n601             10      Sant Martí  41.413719  2.196483  \n602             10      Sant Martí  41.403019  2.192220  \n603              3  Sants-Montjuïc  41.374262  2.158884  \n\n[604 rows x 6 columns]"
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "NAME_AREA        0\nROAD             0\nCODE_DISTRICT    0\nDISTRICT         0\nGEOX             0\nGEOY             0\ndtype: int64"
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,11 +292,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: './data/parques_cleaned.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-634ed9d10188>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_parques\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./data/parques_cleaned.csv\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/core/lib/python3.9/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mto_csv\u001b[0;34m(self, path_or_buf, sep, na_rep, float_format, columns, header, index, index_label, mode, encoding, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, decimal, errors, storage_options)\u001b[0m\n\u001b[1;32m   3461\u001b[0m         )\n\u001b[1;32m   3462\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3463\u001b[0;31m         return DataFrameRenderer(formatter).to_csv(\n\u001b[0m\u001b[1;32m   3464\u001b[0m             \u001b[0mpath_or_buf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3465\u001b[0m             \u001b[0mline_terminator\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mline_terminator\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/core/lib/python3.9/site-packages/pandas/io/formats/format.py\u001b[0m in \u001b[0;36mto_csv\u001b[0;34m(self, path_or_buf, encoding, sep, columns, index_label, mode, compression, quoting, quotechar, line_terminator, chunksize, date_format, doublequote, escapechar, errors, storage_options)\u001b[0m\n\u001b[1;32m   1103\u001b[0m             \u001b[0mformatter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfmt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1104\u001b[0m         )\n\u001b[0;32m-> 1105\u001b[0;31m         \u001b[0mcsv_formatter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1106\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1107\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcreated_buffer\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/core/lib/python3.9/site-packages/pandas/io/formats/csvs.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    235\u001b[0m         \"\"\"\n\u001b[1;32m    236\u001b[0m         \u001b[0;31m# apply compression and byte/text conversion\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 237\u001b[0;31m         with get_handle(\n\u001b[0m\u001b[1;32m    238\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    239\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/core/lib/python3.9/site-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    699\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    700\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 701\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    702\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/parques_cleaned.csv'"
+     ]
+    }
+   ],
    "source": [
-    "df_parques.to_csv(\"./parques_cleaned.csv\", index=False)"
+    "df_parques.to_csv(\"./data/parques_cleaned.csv\", index=False)"
    ]
   }
  ],
