--- a/code/rentacode.ipynb
+++ b/code/rentacode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Codi_Districte</th>\n      <th>Nom_Districte</th>\n      <th>Import_€_Any</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>12351</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>14598</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>16271</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>17803</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>21890</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>24081</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>12981</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>19975</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>18447</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>16710</td>\n    </tr>\n  </tbody>\n</table>\n<p>73 rows × 3 columns</p>\n</div>",
       "text/plain": "    Codi_Districte Nom_Districte  Import_€_Any\n0                1  Ciutat Vella         12351\n1                1  Ciutat Vella         14598\n2                1  Ciutat Vella         16271\n3                1  Ciutat Vella         17803\n4                2      Eixample         21890\n..             ...           ...           ...\n68              10    Sant Martí         24081\n69              10    Sant Martí         12981\n70              10    Sant Martí         19975\n71              10    Sant Martí         18447\n72              10    Sant Martí         16710\n\n[73 rows x 3 columns]"
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>IMPORT_€_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>12351</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>14598</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>16271</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>17803</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>21890</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>24081</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>12981</td>\n    </tr>\n    <tr>\n      <th>70</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>19975</td>\n    </tr>\n    <tr>\n      <th>71</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>18447</td>\n    </tr>\n    <tr>\n      <th>72</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>16710</td>\n    </tr>\n  </tbody>\n</table>\n<p>73 rows × 3 columns</p>\n</div>",
       "text/plain": "    CODE_DISTRICT      DISTRICT  IMPORT_€_ANUAL\n0               1  Ciutat Vella           12351\n1               1  Ciutat Vella           14598\n2               1  Ciutat Vella           16271\n3               1  Ciutat Vella           17803\n4               2      Eixample           21890\n..            ...           ...             ...\n68             10    Sant Martí           24081\n69             10    Sant Martí           12981\n70             10    Sant Martí           19975\n71             10    Sant Martí           18447\n72             10    Sant Martí           16710\n\n[73 rows x 3 columns]"
      },
-     "execution_count": 16,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,22 +143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>DISTRICT</th>\n      <th>IMPORT_€_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Ciutat Vella</td>\n      <td>61023</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Eixample</td>\n      <td>144843</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Gràcia</td>\n      <td>115359</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Horta-Guinardó</td>\n      <td>216671</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Les Corts</td>\n      <td>88058</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Nou Barris</td>\n      <td>193588</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Sant Andreu</td>\n      <td>121358</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Sant Martí</td>\n      <td>206099</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Sants-Montjuïc</td>\n      <td>146194</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>192939</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "              DISTRICT  IMPORT_€_ANUAL\n0         Ciutat Vella           61023\n1             Eixample          144843\n2               Gràcia          115359\n3       Horta-Guinardó          216671\n4            Les Corts           88058\n5           Nou Barris          193588\n6          Sant Andreu          121358\n7           Sant Martí          206099\n8       Sants-Montjuïc          146194\n9  Sarrià-Sant Gervasi          192939"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>CODE_DISTRICT</th>\n      <th>DISTRICT</th>\n      <th>IMPORT_€_ANUAL</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>Ciutat Vella</td>\n      <td>15255.750000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2</td>\n      <td>Eixample</td>\n      <td>24140.500000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>Sants-Montjuïc</td>\n      <td>18274.250000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>Les Corts</td>\n      <td>29352.666667</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5</td>\n      <td>Sarrià-Sant Gervasi</td>\n      <td>32156.500000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6</td>\n      <td>Gràcia</td>\n      <td>23071.800000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7</td>\n      <td>Horta-Guinardó</td>\n      <td>19697.363636</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8</td>\n      <td>Nou Barris</td>\n      <td>14891.384615</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>9</td>\n      <td>Sant Andreu</td>\n      <td>17336.857143</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10</td>\n      <td>Sant Martí</td>\n      <td>20609.900000</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "   CODE_DISTRICT             DISTRICT  IMPORT_€_ANUAL\n0              1         Ciutat Vella    15255.750000\n1              2             Eixample    24140.500000\n2              3       Sants-Montjuïc    18274.250000\n3              4            Les Corts    29352.666667\n4              5  Sarrià-Sant Gervasi    32156.500000\n5              6               Gràcia    23071.800000\n6              7       Horta-Guinardó    19697.363636\n7              8           Nou Barris    14891.384615\n8              9          Sant Andreu    17336.857143\n9             10           Sant Martí    20609.900000"
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "###NECESITO SACAR LA MEDIA DEL IMPORTE ANUAL, NO EL SUMATORIO.\n",
-    "df_renta = df_renta.groupby(['DISTRICT'])['IMPORT_€_ANUAL'].apply(lambda x: x.sum()).reset_index()\n",
+    "df_renta = df_renta.groupby(['CODE_DISTRICT', 'DISTRICT'])['IMPORT_€_ANUAL'].apply(lambda x: x.mean()).reset_index()\n",
     "df_renta"
    ]
   }
